new changes made

--- a/department.html
+++ b/department.html
@@ -229,7 +229,7 @@
         </div>
       </div>
       <hr style="width: 50%; margin: auto; transform: translateY(-50px); margin-top: -40px;">
-      <p style="font-size: 15px; text-align: center;transform: translateY(-30px);">Copyright &copy; 2024 Your Company. All rights reserved.This template is made with  by<a style="text-decoration: none; " href="https://www.linkedin.com/in/theadekanmi" target="_blank">SMGE</a></p>
+      <p style="font-size: 15px; text-align: center;transform: translateY(-30px); color: white;">Copyright &copy; 2024 Your Company. All rights reserved.This template is made with  by <a style="text-decoration: none; color: red; " href="https://www.linkedin.com/in/theadekanmi" target="_blank">SMGE</a></p>
      </footer>
 
 
