--- a/doctors.html
+++ b/doctors.html
@@ -239,7 +239,7 @@ for emergency case.</p>
         </div>
       </div>
       <hr style="width: 50%; margin: auto; transform: translateY(-50px); margin-top: -40px;">
-      <p style="font-size: 15px; text-align: center;transform: translateY(-30px);">Copyright &copy; 2024 Your Company. All rights reserved.This template is made with  by<a style="text-decoration: none; " href="https://www.linkedin.com/in/theadekanmi" target="_blank">SMGE</a></p>
+      <p style="font-size: 15px; text-align: center;transform: translateY(-30px); color: white;">Copyright &copy; 2024 Your Company. All rights reserved.This template is made with  by <a style="text-decoration: none; color: red; " href="https://www.linkedin.com/in/theadekanmi" target="_blank">SMGE</a></p>
      </footer>
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <script>
