--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                 <input type="email" name="" id="email" placeholder="Your Email">
                   <br><br>
               <label for="text">Message</label>
-              <textarea name="text" id="">Message</textarea>
+              <textarea name="text" id="" placeholder="message"></textarea>
               <a href="http://www.linkedin.com/in/theadekanmi"
               >Make An Appointment</a>
             </form>
@@ -428,7 +428,7 @@
           </div>
         </div>
         <hr style="width: 50%; margin: auto; transform: translateY(-50px); margin-top: -40px;">
-        <p style="font-size: 15px; text-align: center;transform: translateY(-30px);">Copyright &copy; 2024 Your Company. All rights reserved.This template is made with  by<a style="text-decoration: none; " href="https://www.linkedin.com/in/theadekanmi" target="_blank">SMGE</a></p>
+        <p style="font-size: 15px; text-align: center;transform: translateY(-30px); color: white;">Copyright &copy; 2024 Your Company. All rights reserved.This template is made with  by <a style="text-decoration: none; color: red; " href="https://www.linkedin.com/in/theadekanmi" target="_blank">SMGE</a></p>
        </footer>
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <script>
